WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291071
REGRESSION(
287912@main
): [UnifiedPDF] [iOS] When clicking and holding over a link the link image gets pixelated
https://bugs.webkit.org/show_bug.cgi?id=291071
Summary
REGRESSION(287912@main): [UnifiedPDF] [iOS] When clicking and holding over a ...
Abrar Rahman Protyasha
Reported
2025-04-04 02:52:14 PDT
rdar://146107036
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-04-04 04:18:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43634
EWS
Comment 2
2025-04-04 15:25:49 PDT
Committed
293279@main
(2fc8e7a44d95): <
https://commits.webkit.org/293279@main
> Reviewed commits have been landed. Closing PR #43634 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug